# GPU-HSF-India-UPunjab-2025

./: .gitmodules  README.md
01/: AC_CUDA_C.ipynb  Session1.ipynb
02/: Session2_advanced.ipynb  Unified Memory.ipynb
03/: Streaming and Visual Profiling.ipynb
04/: Python-GPU.ipynb  Session3_Python-GPU_HEP.ipynb  lesson-5-project.ipynb  lesson-5-workbook.ipynb
05/: GPU-advanced-concepts.ipynb  generator_tutorial_gpu.ipynb
06/: generator_tutorial_gpu_annotated.ipynb  gpu_dd4hep_tilecal.ipynb  gpu_geant4_dd4hep_cuda_notebook.md
07/: cuda_neural_network_demo_complete.ipynb  verify_notebook.py
07/gpu-demo/: CMakeLists.txt  MVAModelsManager.h  README.md  demo.cu  main.cu  mock_dependencies.h
07/gpu-demo/nn_gen/: json_generator.cpp
